--- a/report/finalReport.tex
+++ b/report/finalReport.tex
@@ -23,7 +23,7 @@
 \author{Yun Wu \qquad Qiren Chen \qquad Xiaofan Lu \\
   University of Texas at Austin \\
  Computer Science Department \\
-  {\tt \{yun, qiren, xiaofan\}@cs.utexas.edu} \\}
+  {\tt \{ywu, qiren, xiaofan\}@cs.utexas.edu} \\}
 
 \date{}
 
