--- a/report/ref.tex
+++ b/report/ref.tex
@@ -54,6 +54,14 @@ Apoorv Agarwal, Boyi Xie, Ilia Vovsha, Owen Rambow, and Rebecca Passonneau.
 \newblock Sentiment analysis of Twitter data. 
 \newblock {\em In Proceedings of the Workshop on Languages in Social Media (LSM '11). Association for Computational Linguistics, Stroudsburg, PA, USA, 30-38.}
 
+\bibitem[\protect\citename{Owoputi \bgroup et al.\egroup}2011]{Owoputi:2013},
+Olutobi Owoputi and Chris Dyer and Kevin Gimpel and Nathan Schneider and Noah A. Smith. 
+\newblock 2013. 
+\newblock Improved part-of-speech tagging for online conversational text with word clusters
+\newblock {\em In Proceedings of NAACL}
+
+
+
 \end{thebibliography}
 
 
