modified preprocessing part

--- a/report/finalReport.tex
+++ b/report/finalReport.tex
@@ -17,6 +17,7 @@
 \usepackage{amsfonts}
 \usepackage{lipsum} % for the mock text
 \usepackage{mdframed}
+\usepackage{verbatim}
 
 \title{Twitter sentiment analysis with SVM and RNTN 
 \thanks{This is the final project report for CS 388 Natural Language Processing at The University of Texas at Austin in  2014 Spring}}
