--- a/report/abstract.tex
+++ b/report/abstract.tex
@@ -2,5 +2,5 @@
     In this project, we address the issue of sentiment analysis of twitter message. 
 We collected and preprocessed three types of corpus. Two models, Support Vector Machine(SVM) and  
 Recursive Neural Tensor Network (RNTN) 
-are evaluated by extensive experiment. 
+are evaluated by extensive experiments. 
 \end{abstract}
