--- a/report/intro.tex
+++ b/report/intro.tex
@@ -4,14 +4,13 @@ Microblogging websites (such as Twitter, Weibo) have gained popularity in recent
 Sentiment of microblog is of particular interest because such information is valuable in diverse areas such as entertainment, politics and economics.
 
 However, sentiment analysis over twitter message is a challenging task due to the noisy nature of tweet. 
-It contains ungrammatical sentences, typos, creative punctuation, slang, new words, URLs, and genre-specific terminology and abbreviations, such as, RT for “re-tweet”, \#hashtags, @mentions. 
+It contains ungrammatical sentences, typos, creative punctuations, slangs, new words, URLs, and genre-specific terminology and abbreviations, such as, RT for “re-tweet”, \#hashtags, @mentions. 
 
-Most of existing works of sentiment analysis are based on bag of words classifiers. Different features to improve the performance of bag-of-words model have been proposed\cite{Agarwal:2011}. Such classifiers can work well in longer documents by relying on a few words with strong sentiment such as "great" or "awesome". However, bag-of-words models have difficulties in handling in negation and comparisons, which relies on the structure of sentence. 
+Most of existing works of sentiment analysis are based on bag of words classifiers. Different features to improve the performance of bag-of-words model have been proposed \cite{Agarwal:2011}. Such classifiers can work well in longer documents by relying on a few words with strong sentiment such as "great" or "awesome". However, bag-of-words models have difficulties in handling negations and comparisons, which rely on the structure of sentence. 
 
-Recursive Neural Tensor Network (RNTN) model is recently proposed to capture the compositional effects with higher accuracy. Recursive Neural Tensor Networks take as input phrases of any length. They represent a phrase through word vectors and a parse tree and then compute vectors for higher nodes in the tree using the same tensor-based composition function. \cite{Socher:2013}. The authors claim that RNTN can accurately captures the sentiment change and scope of negation. However, the data set used in the above paper is a bunch of single sentences extracted from well formatted movie reviews, which is quite different from twitter message. We also explore the possibility of domain adaptation of RNTN sentiment model. 
+Recursive Neural Tensor Network (RNTN) model is recently proposed to capture the compositional effects with higher accuracy. It represents a phrases through word vectors and a parse tree and then computes vectors for higher nodes in the tree using the same tensor-based composition function. \cite{Socher:2013}. The authors claim that RNTN can accurately captures the sentiment change and scope of negation. However, the data set used in the above paper is a bunch of single sentences extracted from well formatted movie reviews, which is quite different from twitter message. 
 
-In this paper, we evaluate both bag-of-word model and RNTN model on twitter message to compare the performance of both models. We collect twitter message from different sources and labeled some of them. Such corpus has been pre-processed according to the natural of different models. Experiment results indicates that RNTN perform significantly better on well formatted movie reviews than SVM. When training on \textit{Sentiment Treebank} and testing on general topic tweet, RNTN still perform slightly better. However, due the lack the annotated training set on twitter message, existing RNTN model fails outperform in SVM on the task of sentiment detecting on general topic tweet. In the end, we also explore the possibility of domain adaptation over RNTN model.  
-\newpage
+In this paper, we evaluate both SVM and RNTN model on twitter message to compare the performance of both models. We collect twitter message from different sources and labeled some of them. Such corpus has been pre-processed according to the natural of different models. Experiment results indicate that RNTN perform significantly better than SVM on well formatted movie reviews. When training on \textit{Sentiment Treebank} and testing on general topic tweet, RNTN still performs slightly better. However, due the lack the annotated training set on twitter message, existing RNTN model fails outperform in SVM on the task of sentiment detecting on general topic tweet. In the end, we explore the possibility of domain adaptation over RNTN model.  
 
 
 The paper is organized as follows. Section \ref{sec:def} defines the task we are solving and explains our approach. 
