preprocess in related works

--- a/report/related.tex
+++ b/report/related.tex
@@ -1,4 +1,7 @@
 \section{Related Work}
 \label{sec:related}
 
+Tokenization (splitting a string into its desired constituent parts) is fundamental to all NLP tasks. The Treebank-style is the one used by the Penn Treebank and many other important large-scale corpora for NLP. However, it has some essential drawbacks when it comes to sentiment classification. Among them, one major problem is that almost all tokens that involve punctuation are split apart — URLs, Twitter mark-up, emoticons, etc. Thus, emoticons are collapsed with their component parts and thus important sentimental information is lost. Therefore, we design specialized pattern for twitter tokens, such as usernames, hashtags, emoticons, etc to protect subjective expressions as much as possible. 
+
+However, such process is far from enough. Twitter data is different from other written English because users do not necessarily follow any formal regulations. Misspelling and slangs are quite common. \cite{Owoputi:2013} built hierarchical word clusters via Brown clustering. The algorithm partitions words into a base set of 1,000 clusters, and induces a hierarchy among those 1,000 clusters with a series of greedy agglomerative merges that heuristically optimize the likelihood of a hidden Markov model with a one-class-per-lexical-type constraint. It cannot help us because it will collapses sentiment distinctions, by collecting autonyms into the same word clusters. Fortunately, despite the variaty of online words, the transformation actually follows limited rules. With carefully designed patterns and a slang dictionary, we are able to build a corpus ready for usage of SVM and RNTN models. 
 
